# QuadDLOG

./: .gitignore  CMakeLists.txt
.run/: QuadDLOG 10 64 107.run.xml  QuadDLOG 13 10 9973.run.xml  QuadDLOG 2 21740 30323.run.xml  QuadDLOG 2 24322 30203.run.xml  QuadDLOG 2 28620 30539.run.xml  QuadDLOG 27 520 547.run.xml  QuadDLOG 3 13 17.run.xml  QuadDLOG 31 15 61.run.xml  QuadDLOG 31 46 61.run.xml  QuadDLOG 5 30994 31607.run.xml  QuadDLOG input dialog.run.xml  QuadDLOG.run.xml
QuadDLOG/: CMakeLists.txt  CantorZassenhaus.cpp  CantorZassenhaus.h  GlobalDefine.cpp  GlobalDefine.h  MathsFunctions.cpp  MathsFunctions.h  ModuloComprasion.cpp  ModuloComprasion.h  Polynomial.cpp  Polynomial.h  QuadDLOG.cpp  QuadDLOG.h  QuadraticResidueDLOG.cpp  QuadraticResidueDLOG.h  Root.cpp  Root.h  TonelliShanks.cpp  TonelliShanks.h  Util.h
